updated readme and grid gap fix in stat header

--- a/frontend/src/styles/components/songDetail.css
+++ b/frontend/src/styles/components/songDetail.css
@@ -38,7 +38,7 @@
 	grid-template-columns: 1fr 1fr;
 	align-items: center;
 	justify-items: center;
-	grid-gap: 4px;
+	grid-gap: 8px;
 }
 
 .line{
